# strata

./: .gitignore  CNAME  DNS_CONFIGURATION.md  IMPLEMENTATION_SUMMARY.md  MKDOCS_DEPLOYMENT.md  QUICK_SETUP.md  README.md  codecov.yml  docker-compose.yml  ducatillon.net (1).txt  index.html
backend/: .coverage  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 4a3618ddf9e4_seed_asset_types_reference_data.py  4ec8169a994c_initial_schema_with_all_tables.py  a1b2c3d4e5f6_seed_categories.py  b2c3d4e5f6a7_seed_tags.py  c3d4e5f6a7b8_seed_demo_portfolio.py
backend/app/: cli.py  main.py
backend/app/adapters/outgoing/persistence/: database.py
backend/app/application/use_cases/asset/: __init__.py  create_asset.py  delete_asset.py  dispose_asset.py  get_all_assets.py  get_asset.py  get_assets_by_portfolio.py  update_asset.py
backend/app/domain/entities/: __init__.py  asset.py  asset_snapshot.py  asset_type.py  category.py  portfolio.py  portfolio_snapshot.py  tag.py  transaction.py
backend/app/domain/exceptions/: Exceptions.py  __init__.py
backend/app/domain/ports/: __init__.py
backend/app/domain/ports/event/: readme.md
backend/scripts/: generate_coverage_html.sh  python_audit.sh  test_coverage.sh
backend/tests/: conftest.py  pytest.ini
backend/tests/coverage/: coverage.xml
backend/tests/integration/: conftest.py  test_asset_lifecycle.py  test_asset_tagging_journey.py  test_category_journey.py  test_comprehensive_coverage.py  test_portfolio_journey.py
backend/tests/unit/app/: test_main.py
(+180 files in other folders)
